# movie_agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  docker-compose.mem0.yaml  docker-compose.yaml  readme.md  requirements.mem0.txt  requirements.txt  setup.py
backend/: langfuse_diag.py  pyproject.toml
backend/application/chat/: __init__.py  conversation_graph.py  feedback_service.py  memory_service.py  watchlist_capture_service.py
backend/application/handlers/: __init__.py  base.py  factory.py
backend/application/knowledge_graph/: __init__.py  service.py
backend/application/memory_center/: __init__.py  memory_facade_service.py
backend/application/ports/: __init__.py  chat_completion_port.py  chat_history_port.py  conversation_episode_store_port.py  conversation_episodic_memory_port.py  conversation_repo_port.py  conversation_store_port.py  conversation_summarizer_port.py  conversation_summary_store_port.py  feedback_port.py  knowledge_graph_port.py  memory_store_port.py  rag_executor_port.py  rag_stream_executor_port.py  router_port.py  watchlist_store_port.py
backend/config/: __init__.py  database.py  rag.py  rag_semantics.py  readme.md  settings.py
backend/domain/config/: __init__.py  kb_routing.py  kb_routing.yaml
backend/domain/memory/: __init__.py  memory_item.py  policy.py  watchlist_item.py
backend/graphrag_agent/: __init__.py  readme.md
backend/graphrag_agent/agents/: base.py  deep_research_agent.py  fusion_agent.py  graph_agent.py  hybrid_agent.py  naive_rag_agent.py  readme.md
backend/graphrag_agent/community/: __init__.py  readme.md
backend/graphrag_agent/config/: readme.md  settings.py
backend/graphrag_agent/graph/: __init__.py  graph_consistency_validator.py  readme.md
backend/graphrag_agent/ports/: __init__.py  gds.py  graph_documents.py  models.py  neo4jdb.py  vector_store.py
backend/graphrag_agent/search/: __init__.py  global_search.py  local_search.py  readme.md  tool_registry.py
backend/infrastructure/: __init__.py  bootstrap.py  cache.py  gds.py  graph_documents.py  neo4jdb.py  readme.md  vector_store.py
backend/scripts/: seed_examples.py  verify_examples.py
backend/server/: __init__.py  api_router.py  main.py  readme.md
tools/graphrag_agent_build/: pyproject.toml  readme.md
tools/graphrag_agent_evaluation/: pyproject.toml  readme.md
(+1518 files in other folders)
