[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-agent-eval"
version = "0.1.0"
description = "GraphRAG Agent evaluation tooling (tools-layer)."
requires-python = ">=3.10"
dependencies = [
  "graphrag-agent-runtime==0.1.0",
  "rich==13.9.4",
  "tqdm==4.66.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphrag_agent_evaluation*"]
